<resources>
    <string name="app_name">PopularMovies</string>
    <string name="settings">Settings</string>
    <string name="sign_in">Signed in</string>
    <string name="sign_out">Sign out</string>
    <string name="sign_in_can">Signed In  canceled!!</string>
    <string name="no_internet">Please Connect to the internet and try again</string>
    <string name="add_to_fav">Added to My Favourites</string>
    <string name="removed_from_fav">Removed from My Favourites</string>
    <string name="added_movie">movie have been added </string>
    <string name="youtube">youtube Logo </string>
    <string name="watch_Trailer">Watch Trailer</string>
    <string name="Trailer">Trailer</string>
    <string name="no_trailer">This Movie doesnt have trailers</string>
    <string name="Movie_Poster">The Movie poster should be displayed here</string>
    <string name="Released_ON">Release Date:</string>
    <string name="Movie_Vote">The number of votes are</string>
    <string name="Open_Trailers">Watch the Trailers</string>
    <string name="title_activity_trailers_view">TrailersView</string>
    <string name="FAB">Floating Action Button</string>
    <string name="Author_name">Author name:</string>
    <string name="author">author</string>
    <string name="reviews">Reviews</string>
    <string name="trailers">Trailers</string>
    <string name="overview">Overview:</string>
    <string name="rating"> Ratings</string>
    <string name="movie_id">Movie ID</string>

    <string name="sort_by_favorites">Favorites</string>
    <string name="sort_popularity">Most Popular</string>
    <string name="sort_top_rated">Top rated</string>

    <string name="setting">Settings</string>
    <string name="sort_by_pref_title">Sort By</string>
    <string name="sort_by_key">sort_by_key</string>
    <string name="sort_by_favorites_entry">Favorite Movies</string>
    <string name="sort_popularity_entry">Most Popular Movies</string>
    <string name="sort_top_rated_entry">Top rated Movies</string>
    <string name="favorite">Favorite Movies</string>
    <string name="movie">movie</string>
    <string name="trailersList">Trailers</string>
    <string name="ReviewsList">Reviews</string>
    <string name="empty">Empty </string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>

    <!-- Strings related to Settings -->
    <string-array name="sort_by_pref_entry_array">
        <item>@string/sort_popularity_entry</item>
        <item>@string/sort_top_rated_entry</item>
        <item>@string/sort_by_favorites_entry</item>
    </string-array>

    <string-array name="sort_by_pref_values_array">
        <item>@string/sort_popularity</item>
        <item>@string/sort_top_rated</item>
        <item>@string/sort_by_favorites</item>
    </string-array>
    <string name="title_activity_favorite">FavoriteActivity</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_to_widget">Add widget</string>
    <string name="failed_to_add">Failed To add the movie</string>
    <string name="user_profile">My profile</string>
    <string name="title_activity_movie__details">Movie_Details</string>
    <string name="not_available">Not Available</string>
    <string name="notification_title">Hello</string>
    <string name="notification_body">Check out the latest movies</string>

    <string name="tab_movie">Movie Details</string>
    <string name="tab_review">Reviews</string>
    <string name="tab_trailer">Trailers</string>
</resources>