<?xml version="1.0" encoding="utf-8"?>
<ScrollView

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detailsLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Fragments.MovieDescirption">


<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/movieImage"
        android:layout_width="165dp"
        android:layout_height="172dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="44dp"
        android:contentDescription="@string/Movie_Poster"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <RatingBar

        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="155dp"

        android:clickable="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:numStars="5"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movieImage" />

    <ImageView
        android:id="@+id/favoriteStar"
        android:layout_width="54dp"
        android:layout_height="36dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="155dp"
        android:layout_marginBottom="41dp"
        android:contentDescription="@string/favorite"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/id_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/movieImage" />

    <TextView
        android:id="@+id/id_label"
        android:layout_width="61dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="186dp"
        android:text="@string/movie_id"
        app:layout_constraintStart_toEndOf="@+id/movieImage"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/release"
        android:layout_width="153dp"
        android:layout_height="23dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="242dp"
        android:text="@string/Released_ON"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ratingBar" />

    <TextView
        android:id="@+id/movieReleaseDate"
        android:layout_width="99dp"
        android:layout_height="21dp"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="117dp"
        android:layout_marginBottom="80dp"
        app:layout_constraintBottom_toTopOf="@+id/movieOverview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/release" />

    <TextView
        android:id="@+id/MovieSnippet"
        android:layout_width="85dp"
        android:layout_height="18dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="310dp"
        android:text="@string/overview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/release" />

    <TextView
        android:id="@+id/movieOverview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="41dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MovieSnippet" />

    <TextView
        android:id="@+id/movie-id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginEnd="117dp"
        android:layout_marginBottom="348dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/id_label" />


</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>